--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jane Doe - Portfolio</title>
+    <title>Trevor Lee - Portfolio</title>
     <link rel="stylesheet" href="./style.css"/>
     <script src="./script.js"></script>
   </head>
@@ -10,21 +10,22 @@
     <nav>
       <div id="home">
         <div class="profile_name">
-          Jane Doe
+          Trevor Lee
           <div class="contact_info">
             <img src="html_finalprojimages/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          jdoe@jeemail.com
+          trev191@yahoo.com
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
           <img src="html_finalprojimages/phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
           +13456764598
-
         </div>
         </div>
         <div class="topdiv">
           <a class="topmenu" href="#about-me">About Me</a>
-          <!-- Add the links for Skills, Projects and Recommendation here -->
+          <a class="topmenu" href="#skills">Skills</a>
+          <a class="topmenu" href="#projects">Projects</a>
+          <a class="topmenu" href="#recommendations">Recommendations</a>
 
         </div>
       </div>    
@@ -33,21 +34,24 @@
     <!-- About Me -->
     <section id="about-me" class="container">
       <div>
-        <img src="https://miro.medium.com/max/1400/1*qdAW1TjCN57h1lbuuzvchg.gif" class="profile_image"/>
+        <img src="https://i.kym-cdn.com/photos/images/original/001/562/655/8fa.jpg" class="profile_image"/>
+        <aside>
+          (This is not an accurate picture of me... yet)
+        </aside>
       </div>
 
       <div>
           <h1>
-            Hi, I'm Jane Doe! <img src="https://twemoji.maxcdn.com/2/72x72/1f44b.png" width="60px"/>
+            Hi, I'm Trevor <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2F3.bp.blogspot.com%2F-iZTguITfzHc%2FT02FhlNib_I%2FAAAAAAAAAT8%2F7Zn-KkecUjU%2Fs1600%2FSmiley-Wave.gif&f=1&nofb=1&ipt=e5210edd61af22b91f688f1beedb94f580803c02bc1495158ef1017c457f0bba&ipo=images" width="90px"/>
           </h1>
           <p>
-            I am a full stack developer with 2 years of experience in both application and presentation layers.
-            I have worked on applications and microservices deployed on IBM Cloud. 
-            I am an avid user of IBM Watson Services and have worked on Watson Assistant, NLU, Sentiment analyzer to name a few.
+            I am a highly-motivated software developer with experience in a multitude of fields, including operating systems, networking, full-stack, and cloud computing.
+            I enjoy learning alongside others and building quality software.
+            I am an avid learner and am currently pursuing the IBM Full Stack Software Developer Professional Certificate on Coursera. <br>
           </p>
       </div>
     </section>
-              
+
     <!-- Skills -->
     <section id="skills">
       <h2>Skills</h2>
@@ -55,20 +59,46 @@
 
       <div class="all_skills">
         <div class="skill">
+          <img src="html_finalprojimages/c++.png"/>
+          <h5>C++</h5>
+          <p>4 years experience</p>
+        </div>
+
+        <div class="skill">
+          <img src="html_finalprojimages/python.png"/>
+          <h5>Python</h5>
+          <p>3 years experience</p>
+        </div>
+
+        <div class="skill">
           <img src="html_finalprojimages/html5.png"/>
-          <h6>HTML</h6>
-          <p>2 years experience</p>
-        </div>  
+          <h5>HTML</h5>
+          <p>1 year experience</p>
+        </div>
+
+        <div class="skill">
+          <img src="html_finalprojimages/CSS3.png"/>
+          <h5>CSS</h5>
+          <p>1 year experience</p>
+        </div>
 
         <div class="skill">
           <img src="html_finalprojimages/js.jpeg"/>
-          <h6>JavaScript</h6>
-          <p>3 years experience</p>
-        </div>  
+          <h5>JavaScript</h5>
+          <p>2 years experience</p>
+        </div>
 
-        <!-- Add more skills here -->
+        <div class="skill">
+          <img src="html_finalprojimages/node.png"/>
+          <h5>Node.js</h5>
+          <p>1 year experience</p>
+        </div>
 
-
+        <div class="skill">
+          <img src="html_finalprojimages/react.png"/>
+          <h5>React.js</h5>
+          <p>1 year experience</p>
+        </div>
       </div>
     </section>
           
@@ -81,23 +111,34 @@
 
         <div id="projects-container" class="projects-container">
           <div class="project-card">
-            <h3>Chatbot</h3>
+            <h3>
+              <a href="https://github.com/trev191/Slack-Clone" target="_blank" rel="noopener noreferrer">Slack Clone</a>
+            </h3>
             <ul>
-              <li>Developed a secure website integrated with chatbot for an automobile client using HTML, CSS, JavaScript and IBM Watson Assistant</li>
+              <li>Designed a fully functional Slack clone – with direct messaging system, channels, threads, workspaces, and user profiles/login – in under 6 days</li>
+              <li>Assembled RESTful backend API calls to Docker database using Express.js, Node.js, and OpenAPI</li>
+              <li>Structured frontend with responsive web design using React and Material-U</li>
             </ul>
           </div>
           <hr>
           <div class="project-card">
-            <h3>Sentiment Analyzer</h3>
+            <h3>
+              <a href="https://chrome.google.com/webstore/detail/break-alert/bilocpkncpeojgehfelfaecabikkdolb" target="_blank" rel="noopener noreferrer">Break Alert</a>
+            </h3>
             <ul>
-              <li>Developed and deployed a sentiment analyzer for the box reviews section of an eCommerce platform using IBM NLU</li>
+              <li>Developed and deployed user productivity browser extension with HTML, CSS, and JS</li>
+              <li>Supports a break timer, event scheduler and calendar, distracting website blocking, and automatic tab opening</li>
             </ul>
           </div>
           <hr>
           <div class="project-card">
-            <h3>Fashion Website</h3>
+            <h3>
+              <a href="https://github.com/trev191/Sudoku-Solver" target="_blank" rel="noopener noreferrer">Sudoku Solver</a>
+            </h3>
             <ul>
-              <li>Created a styled multi-page website for a new player in the fashion industry and integrated it with a shopping cart, using stripe for payment gateway</li>
+              <li>Designed user-friendly desktop application using Python's Tkinter library</li>
+              <li>Recursively and visually solves an incomplete sudoku board with ability to control the visualization speed dynamically</li>
+              <li>Supports random sudoku board generation along with user-inputted boards</li>
             </ul>
           </div>
     </div>
@@ -111,24 +152,20 @@
       <div class="all_recommendations" id="all_recommendations">
         <div class="recommendation">
           <span>&#8220;</span>
-          Jane is a very quick learner and quickly grasps key concepts of Web development. 
-          She got a great attitude & she is an excellent team player. 
-          She has a curious mind and asks the right question. 
-          She takes initiative within a team and has potentials to lead the team.
+          Jane has been a pleasure to work with and is very detailed and careful in the work she does.
+          She is never afraid to take on a new challenge.
           <span>&#8221;</span>
         </div>
         <div class="recommendation">
           <span>&#8220;</span>
-          Working with Jane has been an awesome experience. 
-          She is highly knowledgable and always goes the extra step to make sure everything is right. 
-          For any future projects that need her expertise I would definitely want to work with her again.
+          It's been a great past 5 years working with Jane. I can tell she truly cares about the team and the company.
+          She is also really funny.
           <span>&#8221;</span>
         </div>
         <div class="recommendation">
           <span>&#8220;</span>
-          I had worked along with Jane during the initial phase of our venture which needed Web development. 
-          She is a committed resource who has in depth knowledge about the domain. 
-          She will be an asset for any organisation! 
+          I had a blast working with Jane the past year since I joined her team. She never fails to push the team through
+          a difficult task and help us out whenever we get stuck.
           <span>&#8221;</span>
         </div>
       </div>
@@ -150,13 +187,15 @@
 
     <div class="iconbutton">
       <a href="#home">
-        <!--Add the code here for the logo to appear and the icon to be actionable-->
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" width="63px">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
       </a>
     </div>
 
     <div class="popup" id="popup" class="flex_center">
       <img src="html_finalprojimages/checkmark--outline.svg"/>
-      <h3><!-- Add appropriate text here--></h3>
+      <h3>Thanks for leaving a recommendation!</h3>
       <button onclick="showPopup(false)">Ok</button>
     </div>
   </body>
