Add personal links and move CSS/JS to separate folders

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Trevor Lee - Portfolio</title>
-    <link rel="stylesheet" href="./style.css"/>
-    <script src="./script.js"></script>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <script src="./js/script.js"></script>
   </head>
   <body>
     <!-- Navigation Bar -->
@@ -17,8 +17,12 @@
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
-          <img src="html_finalprojimages/phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          +13456764598
+          
+          <img src="html_finalprojimages/linkedin.png"/>
+          <a href="https://www.linkedin.com/in/trevor-lee614/">LinkedIn</a>
+
+          <img src="html_finalprojimages/github.png"/>
+          <a href="https://github.com/trev191">GitHub</a>
         </div>
         </div>
         <div class="topdiv">
