Make personal links open in new tab

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="contact_info">
           
           <img src="html_finalprojimages/linkedin.png"/>
-          <a href="https://www.linkedin.com/in/trevor-lee614/">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/trevor-lee614/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
 
           <img src="html_finalprojimages/github.png"/>
-          <a href="https://github.com/trev191">GitHub</a>
+          <a href="https://github.com/trev191" target="_blank" rel="noopener noreferrer">GitHub</a>
         </div>
         </div>
         <div class="topdiv">
