--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
-          
+          <!-- LinkedIn -->
           <img src="html_finalprojimages/linkedin.png"/>
           <a href="https://www.linkedin.com/in/trevor-lee614/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-
+          <!-- GitHub -->
           <img src="html_finalprojimages/github.png"/>
           <a href="https://github.com/trev191" target="_blank" rel="noopener noreferrer">GitHub</a>
         </div>
@@ -29,9 +29,8 @@
           <a class="topmenu" href="#about-me">About Me</a>
           <a class="topmenu" href="#skills">Skills</a>
           <a class="topmenu" href="#projects">Projects</a>
-
         </div>
-      </div>    
+      </div>
     </nav>
 
     <!-- About Me -->
@@ -104,47 +103,46 @@
         </div>
       </div>
     </section>
-          
+
     <!-- Projects -->
     <section class="projects" id="projects">
       <h2>
         Projects
       </h2>
       <div style="clear:both;"></div>
-
-        <div id="projects-container" class="projects-container">
-          <div class="project-card">
-            <h3>
-              <a href="https://github.com/trev191/Slack-Clone" target="_blank" rel="noopener noreferrer">Slack Clone</a>
-            </h3>
-            <ul>
-              <li>Designed a fully functional Slack clone – with direct messaging system, channels, threads, workspaces, and user profiles/login – in under 6 days</li>
-              <li>Assembled RESTful backend API calls to Docker database using Express.js, Node.js, and OpenAPI</li>
-              <li>Structured frontend with responsive web design using React and Material-UI</li>
-            </ul>
-          </div>
-          <hr>
-          <div class="project-card">
-            <h3>
-              <a href="https://chrome.google.com/webstore/detail/break-alert/bilocpkncpeojgehfelfaecabikkdolb" target="_blank" rel="noopener noreferrer">Break Alert</a>
-            </h3>
-            <ul>
-              <li>Developed and deployed user productivity browser extension with HTML, CSS, and JS</li>
-              <li>Supports a break timer, event scheduler and calendar, distracting website blocking, and automatic tab opening</li>
-            </ul>
-          </div>
-          <hr>
-          <div class="project-card">
-            <h3>
-              <a href="https://github.com/trev191/Sudoku-Solver" target="_blank" rel="noopener noreferrer">Sudoku Solver</a>
-            </h3>
-            <ul>
-              <li>Designed user-friendly desktop application using Python's Tkinter library</li>
-              <li>Recursively and visually solves an incomplete sudoku board with ability to control the visualization speed dynamically</li>
-              <li>Supports random sudoku board generation along with user-inputted boards</li>
-            </ul>
-          </div>
-    </div>
+      <div id="projects-container" class="projects-container">
+        <div class="project-card">
+          <h3>
+            <a href="https://github.com/trev191/Slack-Clone" target="_blank" rel="noopener noreferrer">Slack Clone</a>
+          </h3>
+          <ul>
+            <li>Designed a fully functional Slack clone – with direct messaging system, channels, threads, workspaces, and user profiles/login – in under 6 days</li>
+            <li>Assembled RESTful backend API calls to Docker database using Express.js, Node.js, and OpenAPI</li>
+            <li>Structured frontend with responsive web design using React and Material-UI</li>
+          </ul>
+        </div>
+        <hr>
+        <div class="project-card">
+          <h3>
+            <a href="https://chrome.google.com/webstore/detail/break-alert/bilocpkncpeojgehfelfaecabikkdolb" target="_blank" rel="noopener noreferrer">Break Alert</a>
+          </h3>
+          <ul>
+            <li>Developed and deployed user productivity browser extension with HTML, CSS, and JS</li>
+            <li>Supports a break timer, event scheduler and calendar, distracting website blocking, and automatic tab opening</li>
+          </ul>
+        </div>
+        <hr>
+        <div class="project-card">
+          <h3>
+            <a href="https://github.com/trev191/Sudoku-Solver" target="_blank" rel="noopener noreferrer">Sudoku Solver</a>
+          </h3>
+          <ul>
+            <li>Designed user-friendly desktop application using Python's Tkinter library</li>
+            <li>Recursively and visually solves an incomplete sudoku board with ability to control the visualization speed dynamically</li>
+            <li>Supports random sudoku board generation along with user-inputted boards</li>
+          </ul>
+        </div>
+      </div>
     </section>
     <div style="clear:both;"></div>
 
